--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
+  dio: ^5.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  freezed_annotation: ^2.2.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.7
+  freezed: ^2.4.5
+  hive_generator: ^2.0.1  
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
