--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,20 +9,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.3.6
-  dio: ^5.2.0
+
+  # Bloc para manejar el estado
+  flutter_bloc: ^8.1.5
+
+  # Cliente HTTP
+  dio: ^5.4.3
+
+  # Base de datos local
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  freezed_annotation: ^2.2.0
-  flutter_dotenv: ^5.1.0
+
+  # Programacion funcional
+  dartz: ^0.10.1
+
+  # Inyeccion de dependencias
+  get_it: ^7.6.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  build_runner: ^2.4.7
-  freezed: ^2.4.5
-  hive_generator: ^2.0.1  
+
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
